<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/fondobu"
    tools:context=".MENUS.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/opaco"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            style="@style/FOTO"
            android:background="@drawable/lgblanco"/>
        <TextView
            style="@style/TITULO"
            android:text="@string/TITULO" />
        <EditText
            android:id="@+id/usuario"
            style="@style/ESCRIBIR"
            android:hint="@string/USUAR" />
        <EditText
            android:id="@+id/contra"
            style="@style/ESCRIBIR"
            android:hint="@string/CONTR"
            android:inputType="textPassword" />
        <Button
            android:id="@+id/envio"
            style="@style/BOTON"
            android:text="@string/INGRE" />
        <ProgressBar
            android:id="@+id/carga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorBlanco"
            android:visibility="invisible" />
        <TextView
            android:id="@+id/olvido"
            style="@style/LINK"
            android:text="¿Olvidaste tu contraseña?" />
    </LinearLayout>
</LinearLayout>