<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/fondobu"
    tools:context=".CLIENTE.ClienteDatosActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/opaco">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded"
            android:gravity="left">
            <Button
                android:id="@+id/back"
                style="@style/MENU"
                android:background="@drawable/bback"/>
            <TextView
                style="@style/ENCABEZADO"
                android:text="@string/DATOS"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">



                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/foto"
                    style="@style/FOTO"
                    app:civ_border_color="@color/colorBlanco"
                    app:civ_border_width="4dp"/>

                <TextView
                    style="@style/TEXTO"
                    android:text="Código:" />
                <EditText
                    android:id="@+id/codigo"
                    style="@style/ESCRIBIR"
                    android:onClick="onClick"
                    android:editable="false"
                    android:hint="@string/CODIG" />
                <TextView
                    style="@style/TEXTO"
                    android:text="Nombre:" />
                <EditText
                    android:id="@+id/nombre"
                    style="@style/ESCRIBIR"
                    android:hint="@string/NOMBR"/>
                <TextView
                    style="@style/TEXTO"
                    android:text="Apellido Paterno:"/>
                <EditText
                    android:id="@+id/ap_pa"
                    style="@style/ESCRIBIR"
                    android:hint="@string/PATER" />
                <TextView
                    style="@style/TEXTO"
                    android:text="Apellido Materno:"/>
                <EditText
                    android:id="@+id/ap_ma"
                    style="@style/ESCRIBIR"
                    android:hint="@string/MATER" />
                <TextView
                    style="@style/TEXTO"
                    android:text="Carrera:"/>
                <Button
                    android:id="@+id/carrera"
                    style="@style/ESCRIBIR"
                    android:onClick="onClick"
                    android:text="@string/SELEC"/>
                <TextView
                    style="@style/TEXTO"
                    android:text="Sexo:"/>
                <Button
                    android:id="@+id/sexo"
                    style="@style/ESCRIBIR"
                    android:onClick="onClick"
                    android:text="@string/SELEC"/>
                <Button
                    android:id="@+id/guardar"
                    style="@style/BOTON"
                    android:text="@string/GUARD" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>