<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/fondobu"
    tools:context=".MENUS.MenuClienteActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/opaco">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded"
            android:gravity="left">
            <Button
                android:id="@+id/menu"
                style="@style/MENU" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView style="@style/TITULO"
                android:text="@string/BIENV"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/foto"
                style="@style/FOTO"
                app:civ_border_color="@color/colorBlanco"
                app:civ_border_width="4dp"/>
            <TextView
                android:id="@+id/nombre"
                style="@style/SUBTITULO"
                android:text="NOMBRE USUARIO"/>
            <TextView
                android:id="@+id/codigo"
                style="@style/SUBTITULO"
                android:text="CODIGO USUARIO"/>
            <Button
                android:id="@+id/asistencias"
                style="@style/LISTA"
                android:text="@string/ASIST"/>
            <Button
                android:id="@+id/ventilacion"
                style="@style/LISTA"
                android:text="@string/VENTI"/>
            <Button
                android:id="@+id/datosotos"
                style="@style/LISTA"
                android:text="@string/DATOS"/>
            <Button
                android:id="@+id/docentes"
                style="@style/LISTA"
                android:text="@string/DOCEN"
                android:visibility="invisible"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>