<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/fondobu"
    tools:context=".COMUNI.ContraActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/opaco">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded"
            android:gravity="left">
            <Button
                android:id="@+id/back"
                style="@style/MENU"
                android:background="@drawable/bback"/>
            <TextView
                style="@style/ENCABEZADO"
                android:text="@string/CONTRA"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                style="@style/TEXTO"
                android:text="Contraseña Antigua:" />
            <EditText
                android:id="@+id/antigua"
                style="@style/ESCRIBIR"
                android:hint="@string/ANT"
                android:inputType="textPassword"/>
            <TextView
                style="@style/TEXTO"
                android:text="Nueva Contraseña:" />
            <EditText
                android:id="@+id/nueva"
                style="@style/ESCRIBIR"
                android:hint="@string/NUE"
                android:inputType="textPassword"/>
            <TextView
                style="@style/TEXTO"
                android:text="Repetir Contraseña:" />
            <EditText
                android:id="@+id/repite"
                style="@style/ESCRIBIR"
                android:hint="@string/REP"
                android:inputType="textPassword"/>
            <Button
                android:id="@+id/envio"
                style="@style/BOTON"
                android:text="@string/CAMBI"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>