<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/fondobu"
    tools:context=".COMUNI.OlvidoActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/opaco">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded"
            android:gravity="left">
            <Button
                android:id="@+id/back"
                style="@style/MENU"
                android:background="@drawable/bback"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                style="@style/FOTO"
                android:background="@drawable/lgblanco"/>
            <TextView
                style="@style/TITULO"
                android:text="@string/TIT_CON"/>
            <EditText
                android:id="@+id/codigo"
                style="@style/ESCRIBIR"
                android:hint="@string/CODIG"/>
            <Button
                android:id="@+id/envio"
                style="@style/BOTON"
                android:text="@string/ENVIO"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>