<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/fondobu"
    tools:context=".ADMIN.AdminProgramarActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/opaco">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded"
            android:gravity="left">
            <Button
                android:id="@+id/back"
                style="@style/MENU"
                android:background="@drawable/bback"/>
            <TextView
                style="@style/ENCABEZADO"
                android:text="@string/PROGR"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    style="@style/TEXTO"
                    android:text="Campus:"/>
                <Button
                    android:id="@+id/campus"
                    style="@style/ESCRIBIR"
                    android:onClick="onClick"
                    android:text="@string/SELEC"/>
                <TextView
                    style="@style/TEXTO"
                    android:text="Carrera:"/>
                <Button
                    android:id="@+id/carrera"
                    style="@style/ESCRIBIR"
                    android:onClick="onClick"
                    android:text="@string/SELEC"/>
                <TextView
                    style="@style/TEXTO"
                    android:text="Curso:"/>
                <Button
                    android:id="@+id/curso"
                    style="@style/ESCRIBIR"
                    android:onClick="onClick"
                    android:text="@string/SELEC"/>
                <TextView
                    style="@style/TEXTO"
                    android:text="Sección:"/>
                <Button
                    android:id="@+id/seccion"
                    style="@style/ESCRIBIR"
                    android:onClick="onClick"
                    android:text="@string/SELEC"/>
                <TextView
                    style="@style/TEXTO"
                    android:text="Fecha / Hora de Inicio / Duración:"/>
                <Button
                    android:id="@+id/fecha"
                    style="@style/ESCRIBIR"
                    android:onClick="onClick"
                    android:text="FECHA"/>
                <Button
                    android:id="@+id/hora"
                    style="@style/ESCRIBIR"
                    android:onClick="onClick"
                    android:text="HORARIO INICIO"/>
                <Button
                    android:id="@+id/duracion"
                    style="@style/ESCRIBIR"
                    android:onClick="onClick"
                    android:text="DURACIÓN"/>
                <TextView
                    style="@style/TEXTO"
                    android:text="Docente:"/>
                <Button
                    android:id="@+id/docente"
                    style="@style/ESCRIBIR"
                    android:onClick="onClick"
                    android:text="@string/SELEC"/>
                <Button
                    android:id="@+id/programar"
                    style="@style/BOTON"
                    android:text="@string/PROGRAM" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>